--- a/css/styles.css
+++ b/css/styles.css
@@ -5,57 +5,89 @@
 
 }
 
-
-
 body {
-   background-color: #FFFFFF;   
-   color: var(--primary-text-color);
-        display: flex;
-        flex-direction: row;
-        width: 1600px;
+        background-color: #FFFFFF;   
         margin: 0 auto;
-        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        letter-spacing: -0.015em;        
+        font-family: 'Roboto', 'Raleway', sans-serif;
+       
 }
+
+ul {
+        list-style: none;
+}
+
+link {
+        text-decoration: none ;
+}
+
+/* color: var(--primary-text-color);
+display: flex;
+flex-direction: row; 
+width: 1600px;
+letter-spacing: -0.015em; */
+
+
+
+
 /* Колір основного заголовку - color: #FFFFFF; */
 /* Колір заголовків color: #212121; */
 /* Колір другорядного тексту color: #757575; */
 /* Колір акцент color: #2196F3; */
-
-
 
 /* Шрифт другорядний roboto */
 
 
 
 .logo {
-        color: #000000; 
-        position: absolute;
-        width: 145px;                
-        height: 31px;
-        left: 215px;
-        top: 24px;
-        font-family: Raleway;
+                color: var(--accent-color);
+                position: absolute;
+                width: 145px;
+                height: 31px;
+                left: 215px;
+                top: 24px;
+                font-family: 'Raleway';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 26px;
+                line-height: 1.19;
+                letter-spacing: 0.03em;
+                text-decoration: none;
         }
 
-.list {
-        list-style: none;
+.logo-studio {
+        color: #000000;
 }
+
+.logo .logo-studio:hover {
+        color: var(--accent-color);
+}
+
+/* .list {
+        list-style: none;
+} */
 
 /* header nav */
 
-.header-nav .link {
-color: var(--primary-text-color);
+/* .header ul {
+                list-style: none;     
+} */
 
+.header-nav a{
+        color: var(--primary-text-color);
+        text-decoration: none;   
 }
 
-.header-nav .link:hover, 
-.header-nav .link:focus,
-         {
+.header-nav a:hover,
+.header-nav a:focus
+ {
         color: var(--accent-color);
         cursor: pointer;
-        
+}
 
+
+.auth-nav a:hover,
+.auth-nav a:focus {
+        color: var(--accent-color);
 }
 
 
@@ -67,7 +99,7 @@ color: var(--primary-text-color);
                 top: 32px;
                 font-weight: 500;
                 font-size: 14px;
-                line-height: 0,875;
+                line-height: 1.71;
                 letter-spacing: 0.02em;
 }
 
@@ -79,11 +111,12 @@ color: var(--primary-text-color);
                 top: 32px;
                 font-weight: 500;
                 font-size: 14px;
-                line-height: 0,875;
+                line-height: 1.71;
                 letter-spacing: 0.02em;
 }
 
-
+/* Контакти */
+ 
 .header-contacts {
         position: absolute;
         width: 68px;
@@ -92,10 +125,41 @@ color: var(--primary-text-color);
         top: 32px;
         font-weight: 500;
         font-size: 14px;
-        line-height: 0,875;
+        line-height: 1.71;
         letter-spacing: 0.02em;
 }
 
+.auth-mail {
+        color: var(--title-text-color);
+        position: absolute;
+        width: 135px;
+        height: 16px;
+        left: 1078px;
+        top: 32px;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.02em;
+        text-decoration: none;
+}
+
+.auth-tel {
+        color: var(--title-text-color);
+        position: absolute;
+        width: 122px;
+        height: 16px;
+        left: 1263px;
+        top: 32px;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.02em;
+        text-decoration: none;
+}
+
+
+
+/* Main */
 
 /* hero */
 
@@ -109,76 +173,17 @@ color: var(--primary-text-color);
 }
 
 .hero-title {
-        color: #FFFFFF;
-        font-size: 44px;
-        position: absolute;
-                width: 696px;
-                height: 120px;
-                left: 452px;
-                top: 280px;
+                font-style: normal;
                 font-weight: 900;
-                line-height: 15;
+                font-size: 44px;
+                line-height: 1.5;
                 text-align: center;
                 letter-spacing: 0.06em;
                 text-transform: uppercase;
+                color: #FFFFFF;
+                margin: 200px 452px 280px 452px;
+                margin-bottom: 30px;
                 
-}
-
-/* section */
-
-.section {
-
-}
-.section-title {
-        color: var(--primary-text-color);
-}
-.auth-nav {
-        color: #757575;
-}
-
-/* контакти */
-.auth-nav-mail {
-                position: absolute;
-                width: 135px;
-                height: 16px;
-                left: 1078px;
-                top: 32px;
-                font-weight: 500;
-                font-size: 14px;
-                line-height: 0,875;
-                letter-spacing: 0.02em;
-}
-
-.auth-nav-tel {
-                position: absolute;
-                width: 122px;
-                height: 16px;
-                left: 1263px;
-                top: 32px;
-                font-weight: 500;
-                font-size: 14px;
-                line-height: 0,875;
-                letter-spacing: 0.02em;
-}
-
-
-.auth-nav .link:hover,
-.auth-nav .link:focus {
-        color: var(--accent-color);
-}
-
-.auth-nav:hover {
-        color: var(--primary-text-color);
-}
-
-/* details-list */
-
-.details-list .title {
-        color: var(--primary-text-color);
-}
-
-.details-list .text {
-        color: var(--title-text-color);
 }
 
 /*  button */
@@ -187,22 +192,549 @@ color: var(--primary-text-color);
         color: #FFFFFF;
         background-color: var(--accent-color);
         position: absolute;
-                width: 200px;
-                height: 50px;
-                left: 700px;
-                top: 430px;
-                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-                border-radius: 4px;
+        width: 200px;
+        height: 50px;
+        left: 700px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+                font-style: normal;
+                font-weight: 700;
+                font-size: 16px;
+                line-height: 1.875;
+                letter-spacing: 0.06em;
+                
 }
+
+
+
+
+
+/* Внимание к деталям */
+
+.details-list h3 {
+        text-align: left;
+}
+
+.details-list p {
+        text-align: left;
+}
+
+
+.title-attention {
+        color: var(--primary-text-color);
+        position: absolute;
+                width: 270px;
+                height: 16px;
+                left: 215px;
+                top: 774px;
+                font-style: normal;
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 1.14;
+                letter-spacing: 0.03em;
+                text-transform: uppercase;
+}
+
+.text-att {
+                color: var(--title-text-color);
+                position: absolute;
+                width: 270px;
+                height: 75px;
+                left: 215px;
+                top: 800px;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 2;
+                letter-spacing: 0.03em;
+}
+
+
+.title-time {
+        color: var(--primary-text-color);
+        position: absolute;
+        width: 270px;
+        height: 16px;
+        left: 515px;
+        top: 774px;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+}
+
+.text-time {
+                color: var(--title-text-color);
+                position: absolute;
+                width: 270px;
+                height: 75px;
+                left: 515px;
+                top: 800px;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 2;
+                letter-spacing: 0.03em;
+
+}
+
+.title-plans {
+                color: var(--primary-text-color);
+                position: absolute;
+                width: 270px;
+                height: 16px;
+                left: 815px;
+                top: 774px;
+                font-style: normal;
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 1.14;
+                letter-spacing: 0.03em;
+                text-transform: uppercase;
+}
+
+.text-plans {
+        color: var(--title-text-color);
+        position: absolute;
+                width: 270px;
+                height: 75px;
+                left: 815px;
+                top: 800px;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 2;
+                letter-spacing: 0.03em;
+}
+
+.title-tech {
+        color: var(--primary-text-color);
+        position: absolute;
+                width: 270px;
+                height: 16px;
+                left: 1115px;
+                top: 774px;
+                font-family: 'Roboto';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 1.14;
+                letter-spacing: 0.03em;
+                text-transform: uppercase;
+}
+
+.text-tech {
+                color: var(--title-text-color);
+                position: absolute;
+                width: 270px;
+                height: 75px;
+                left: 1115px;
+                top: 800px;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 2;
+                letter-spacing: 0.03em;
+}
+
+
+/* Чем мы занимаемся */
+
+.section-works {
+        color: var(--primary-text-color);
+        position: absolute;
+        font-style: normal;
+        /* width: 376px; */
+        height: 42px;
+        left: 612px;
+        top: 969px;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.16;
+        text-align: center;
+        letter-spacing: 0.03em;
+}
+
+.img-web{
+                position: absolute;
+                width: 370px;
+                height: 294px;
+                left: 215px;
+                top: 1061px;
+}
+
+.img-app {
+                position: absolute;
+                width: 370px;
+                height: 294px;
+                left: 615px;
+                top: 1061px;
+}
+
+.img-design {
+                position: absolute;
+                width: 370px;
+                height: 294px;
+                left: 1015px;
+                top: 1061px;
+}
+
+/* Наша команда */
+
+
+.block-team {
+        position: absolute;
+        width: 1600px;
+        height: 648px;
+        left: 0px;
+        top: 1449px;
+        background: #F5F4FA;
+}
+
+.section-team {
+        color: var(--primary-text-color);
+        font-style: normal;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.16;
+        letter-spacing: 0.03em;
+        margin-top: 94px;
+        
+        
+}
+
+.block-team h2, h3, p {
+        text-align: center;
+}
+
+.block-team li {
+        background: #FFFFFF;
+}
+
+
+.igor {
+                position: absolute;
+                width: 270px;
+                height: 368px;
+                left: 215px;
+                box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+                border-radius: 0px 0px 4px 4px;
+}
+
+.olga {
+                position: absolute;
+                width: 270px;
+                height: 368px;
+                left: 515px;
+                box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+                border-radius: 0px 0px 4px 4px;
+}
+
+.nikolay {
+                position: absolute;
+                width: 270px;
+                height: 368px;
+                left: 815px;
+                box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+                border-radius: 0px 0px 4px 4px;
+}
+
+.miha {
+                position: absolute;
+                width: 270px;
+                height: 368px;
+                left: 1115px;
+                box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+                border-radius: 0px 0px 4px 4px;
+}
+
+
+
+
+
+
+
 
 
 /* footer style */
 
-.block-footer {
+.footer-block {
         position: absolute;
         width: 1600px;
         height: 252px;
         left: 0px;
         top: 2097px;
         background: #2F303A;
+        margin: 0;
 }
+
+.footer-block a { 
+        text-decoration: none;
+        list-style: none;
+
+}
+
+.footer-block a:hover,
+.footer-block a:focus
+  {
+        color: var(--accent-color);
+        cursor: pointer;
+ }
+
+.logo-web {
+                color: var(--accent-color);
+                position: absolute;
+                font-family: 'Raleway';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 26px;
+                line-height: 1.19;
+                letter-spacing: 0.03em;
+                margin: 60px 1240px 161px 215px;
+}
+
+
+.logo-footer {
+        color: #FFFFFF;
+      
+}
+
+
+
+.footer-adress {
+                position: absolute;
+                width: 231px;
+                height: 21px;
+                left: 215px;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 2;
+                letter-spacing: 0.03em;
+                color: #FFFFFF;
+                margin-top: 111px;
+}
+
+.footer-mail {
+                position: absolute;
+                width: 231px;
+                height: 21px;
+                left: 215px;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 2;
+                letter-spacing: 0.03em;
+                color: rgba(255, 255, 255, 0.6);
+                margin-top: 141px;
+}
+
+.footer-tel {
+                position: absolute;
+                width: 231px;
+                height: 21px;
+                left: 215px;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 2;
+                letter-spacing: 0.03em;
+                color: rgba(255, 255, 255, 0.6);
+                margin-top: 171px;
+}
+
+
+
+/* Portfolio. html */
+
+.line {
+        border: 1px solid #ECECEC;
+}
+
+
+.line-header {
+        position: absolute;
+        width: 1600px;
+        height: 0px;
+        left: 0px;
+        top: 80px;
+        border: 1px solid #ECECEC;
+}
+
+/* filters */
+
+/* .filters {
+                position: absolute;
+                width: 1600px;
+                height: 0px;
+                left: 0px;
+                margin-bottom: 94px;
+                border: 1px solid #ECECEC;
+} */
+.filters li {
+                background: #F5F4FA;
+                border-radius: 4px;
+                position: absolute;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 2.16;
+                text-align: center;
+                letter-spacing: 0.03em;
+                color: var(--primary-text-color);
+                
+}
+
+.filters li:hover, 
+.filters li:focus {
+        color: white;
+        background-color: var(--accent-color );
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+
+}
+
+.all-button {
+        position: absolute;
+        width: 73px;
+        height: 38px;
+        left: 495px;
+        top: 174px;
+        border-radius: 4px;
+        
+}
+
+.sites-button {
+                position: absolute;
+                width: 128px;
+                height: 38px;
+                left: 576px;
+                top: 174px;
+                
+}
+
+.app-button {
+                position: absolute;
+                width: 145px;
+                height: 38px;
+                left: 712px;
+                top: 174px;
+}
+
+.design-button {
+                position: absolute;
+                width: 103px;
+                height: 38px;
+                left: 865px;
+                top: 174px;
+                background: #F5F4FA;
+                
+}
+
+.marketing-button {
+                position: absolute;
+                width: 130px;
+                height: 38px;
+                left: 976px;
+                top: 174px;
+                
+}
+
+
+
+/* Works */
+
+/* block works 1 */
+
+.portfolio-works li{
+        background: #FFFFFF;
+        border: 1px solid #EEEEEE;
+        text-align: left;
+        
+}
+
+.technokryak {
+                box-sizing: border-box;
+                position: absolute;
+                width: 370px;
+                height: 404px;
+                left: 215px;
+                margin-top: 262px;
+                
+}
+
+.poster {
+                box-sizing: border-box;
+                position: absolute;
+                width: 370px;
+                height: 404px;
+                left: 615px;
+                margin-top: 262px;
+}
+
+.seafood 
+        {
+        box-sizing: border-box;
+        position: absolute;
+        width: 370px;
+        height: 404px;
+        left: 1015px;
+        margin-top: 262px;
+}
+
+/* block works 2 */
+
+.prime-works {
+        box-sizing: border-box;
+        position: absolute;
+        width: 370px;
+        height: 404px;
+        left: 215px;
+        margin-top: 696px;
+}
+.boxes-works {
+                box-sizing: border-box;
+                position: absolute;
+                width: 370px;
+                height: 404px;
+                left: 615px;
+                margin-top: 696px;
+}
+
+.inspiration-works {
+                box-sizing: border-box;
+                position: absolute;
+                width: 370px;
+                height: 404px;
+                left: 1015px;
+                margin-top: 696px;
+}
+
+/* block works 3 */
+
+.limited {
+                box-sizing: border-box;
+                position: absolute;
+                width: 370px;
+                height: 404px;
+                left: 215px;
+                margin-top: 1130px;
+}
+.lab-works {
+                position: absolute;
+                width: 370px;
+                height: 404px;
+                left: 615px;
+                margin-top: 1130px;
+}
+
+.growing-works {
+                box-sizing: border-box;
+                position: absolute;
+                width: 370px;
+                height: 404px;
+                left: 1015px;
+                margin-top: 1130px;
+}
+
