--- a/css/styles.css
+++ b/css/styles.css
@@ -177,13 +177,14 @@ letter-spacing: -0.015em; */
 
 .button {
         color: #FFFFFF;
-        background-color: var(--accent-color);
+        background: var(--accent-color);
         position: absolute;
         width: 200px;
         height: 50px;
         left: 700px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         border-radius: 4px;
+        border: 0;
                 font-style: normal;
                 font-weight: 700;
                 font-size: 16px;
