--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,8 @@
 body {
         background-color: #FFFFFF;   
         margin: 0 auto;
-        font-family: 'Roboto', 'Raleway', sans-serif;
-       
+        font-family: 'Roboto', sans-serif;
+        
 }
 
 ul {
@@ -61,8 +61,14 @@ letter-spacing: -0.015em; */
 
 .header-nav a{
         color: var(--primary-text-color);
-        text-decoration: none;   
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.02em;
+        text-decoration: none;
+        font-style: normal;
 }
+
 
 .header-nav a:hover,
 .header-nav a:focus
@@ -78,17 +84,28 @@ letter-spacing: -0.015em; */
 }
 
 
+/* .current {
+        color: var(--accent-color);
+}
+
+.header-nav .current {
+        color: var(--accent-color);
+} */
+
+
+
+
 .header-studio {
                 position: absolute;
                 width: 49px;
                 height: 16px;
                 left: 453px;
                 top: 32px;
-                font-weight: 500;
-                font-size: 14px;
-                line-height: 1.71;
-                letter-spacing: 0.02em;
+                        
 }
+
+
+
 
 .header-portfolio {
                 position: absolute;
@@ -96,10 +113,7 @@ letter-spacing: -0.015em; */
                 height: 16px;
                 left: 552px;
                 top: 32px;
-                font-weight: 500;
-                font-size: 14px;
-                line-height: 1.71;
-                letter-spacing: 0.02em;
+               
 }
 
 /* Контакти */
@@ -110,10 +124,7 @@ letter-spacing: -0.015em; */
         height: 16px;
         left: 679px;
         top: 32px;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.71;
-        letter-spacing: 0.02em;
+        
 }
 
 .auth-mail {
@@ -185,6 +196,7 @@ letter-spacing: -0.015em; */
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         border-radius: 4px;
         border: 0;
+        font-family: 'Roboto';
                 font-style: normal;
                 font-weight: 700;
                 font-size: 16px;
@@ -380,6 +392,7 @@ letter-spacing: -0.015em; */
         left: 0px;
         top: 1449px;
         background: #F5F4FA;
+        
 }
 
 .section-team {
@@ -390,13 +403,24 @@ letter-spacing: -0.015em; */
         line-height: 1.16;
         letter-spacing: 0.03em;
         margin-top: 94px;
+
+        
         
         
 }
 
-.block-team h2, h3, p {
+.block-team > h2, h3 {
+        text-align: center;
+        color: var(--primary-text-color);
+        
+}
+
+.block-team p {
+        color: var(--title-text-color);
         text-align: center;
 }
+
+
 
 .block-team li {
         background: #FFFFFF;
@@ -410,6 +434,10 @@ letter-spacing: -0.015em; */
                 left: 215px;
                 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
                 border-radius: 0px 0px 4px 4px;
+                font-weight: 500;
+                font-size: 16px;
+                        line-height: 19px;
+                        letter-spacing: 0.03em;
 }
 
 .olga {
@@ -419,6 +447,10 @@ letter-spacing: -0.015em; */
                 left: 515px;
                 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
                 border-radius: 0px 0px 4px 4px;
+                font-weight: 500;
+                        font-size: 16px;
+                        line-height: 19px;
+                        letter-spacing: 0.03em;
 }
 
 .nikolay {
@@ -428,6 +460,10 @@ letter-spacing: -0.015em; */
                 left: 815px;
                 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
                 border-radius: 0px 0px 4px 4px;
+                font-weight: 500;
+                        font-size: 16px;
+                        line-height: 19px;
+                        letter-spacing: 0.03em;
 }
 
 .miha {
@@ -437,6 +473,10 @@ letter-spacing: -0.015em; */
                 left: 1115px;
                 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
                 border-radius: 0px 0px 4px 4px;
+                font-weight: 500;
+                        font-size: 16px;
+                        line-height: 19px;
+                        letter-spacing: 0.03em;
 }
 
 
@@ -564,6 +604,7 @@ letter-spacing: -0.015em; */
                 background: #F5F4FA;
                 border-radius: 4px;
                 position: absolute;
+                font-family: 'Roboto';
                 font-style: normal;
                 font-weight: 500;
                 font-size: 16px;
@@ -638,9 +679,26 @@ letter-spacing: -0.015em; */
 .portfolio-works li{
         background: #FFFFFF;
         border: 1px solid #EEEEEE;
-        text-align: left;
         
 }
+
+.portfolio-works p {
+        margin: 24px;
+        color: var(--title-text-color);
+}
+
+.portfolio-works h3 {
+        text-align: 24px;
+        color: var(--primary-text-color);
+        font-family: 'Roboto';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 18px;
+                line-height: 36px;
+                letter-spacing: 0.06em;
+}
+
+
 
 .technokryak {
                 box-sizing: border-box;
