--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body {
 ul {
         list-style: none;
         text-decoration: none;
+        list-style-type: none;
 }
 
 
@@ -49,6 +50,8 @@ letter-spacing: -0.015em; */
                 text-decoration: none;
                 font-style: normal;
 }
+
+
         
 .logo {
         position: absolute;
@@ -87,13 +90,13 @@ letter-spacing: -0.015em; */
 }
 
 
-.current {
+/* .current {
         color: var(--accent-color);
 }
 
 .header-studio .current {
         color: var(--accent-color);
-}
+} */
 
 
 
@@ -110,18 +113,21 @@ letter-spacing: -0.015em; */
 }
 
 
-
-
 .header-portfolio {
-                position: absolute;
+        position: absolute;
                 width: 77px;
                 height: 16px;
                 left: 552px;
                 top: 32px;
                 text-decoration: none;
-                        color: var(--primary-text-color);
-               
+                color: var(--primary-text-color);
 }
+
+.active {
+        color: var(--accent-color);
+}
+
+
 
 /* Контакти */
  
@@ -699,6 +705,7 @@ letter-spacing: -0.015em; */
 .portfolio-works p {
         margin: 24px;
         color: var(--title-text-color);
+        text-align: center;
 
 }
 
