--- a/css/styles.css
+++ b/css/styles.css
@@ -52,8 +52,8 @@ li {
 /* Header */
 
 .header {
-        display: flex;
-        justify-content: space-between;
+        /* display: flex;
+        justify-content: space-between; */
         border-bottom: 1px solid var(--border-color);
 }
 
@@ -63,7 +63,7 @@ li {
         
 }
 
-.nav-container {
+.site-nav {
         display: flex;
         align-items: center;
 }
@@ -93,8 +93,6 @@ li {
 }
 
 .header-nav {
-        margin-top: 32px;
-        color: var(--primary-text-color);
         font-weight: 500;
         font-style: normal;
         
@@ -106,6 +104,7 @@ li {
                 margin-bottom: 0;
                 margin-left: 93px;
                 text-decoration: none;
+                color: var(--primary-text-color);
 
 }
 
@@ -146,7 +145,7 @@ li {
 }
 
 .contacts-list__item:last-child {
-        margin-right: 0px;
+        margin-right: 0;
 
 }
 
@@ -460,22 +459,24 @@ li {
 
 
 .main-box {
-        text-align: center;
-}
-
-.section {
         padding-top: 94px;
         padding-bottom: 94px;
         }
 
-.main-title {
-        text-align: center;
-        margin-top: 0;
-        margin-bottom: 50px;
-        font-size: 36px;
-        line-height: 1.16;
-        color: var(--secondary-text-color);
+.visually-hidden {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
 }
+
+
 
 .filters {
         display: flex;
@@ -502,10 +503,8 @@ li {
         border: 0;
 }
 
-
-
 .item-button {
-                background-color: white;
+                background-color: var(--secondary-background-color);
                 border-color: transparent;
                 border-radius: 4px;
                 font-family: 'Roboto';
@@ -517,9 +516,7 @@ li {
                 letter-spacing: 0.03em;
                 color: var(--primary-text-color);
                 cursor: pointer;
-                padding: 0;
-                
-                
+                padding: 0;                
 }
 
 
@@ -529,82 +526,58 @@ button {
 }
 
 
-/* .filters li:hover, 
-.filters li:focus {
+.item-button:hover, 
+.item-button:focus
+ {
         color: white;
         background-color: var(--accent-color );
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 
-} */
-
-
-
-.all-button {
-        width: 73px;
-        height: 38px;
-        border-radius: 4px;
-        display: flex;
-                align-items: center;
-                justify-content: center;
-        
-}
-
-.sites-button {
-                width: 128px;
-                
-}
-
-.app-button {
-                width: 145px;
-                
-}
-
-.design-button {
-                width: 103px;
-                
-                background: #F5F4FA;
-                
-}
-
-.marketing-button {
-                width: 130px;
-                height: 38px;
-                
 }
 
 
 
 /* Works */
 
+.portfolio-list h2 {
+        color: var(--primary-text-color);
+        font-family: 'Roboto', sans-serif;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 2;
+        letter-spacing: 0.06em;
+}
+
+.portfolio-list p {
+        color: var(--main-text-color);
+        font-family: 'Roboto', sans-serif;
+        font-size: 16px;
+        line-height: 1.8;
+}
+
 
 .portfolio-works {
-        margin: 0;
-        padding: 0;
-}
-.portfolio-works li{
-        background: #FFFFFF;
-        border: 1px solid #EEEEEE;
-        box-sizing: border-box;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+        
 }
 
-
-.portfolio-works h3 {
-        color: var(--primary-text-color);
-        text-align: left;
-        margin: 20px 24px 54px;
-        font-family: 'Roboto';
-                font-style: normal;
-                font-weight: 700;
-                font-size: 18px;
-                line-height: 36px;
+.portfolio-list {
+        margin-right: 30px;
+        margin-bottom: 30px;
 }
 
-/* .portfolio-works-item {
-        padding: 20px 24px 20px 24px;
-} */
+.portfolio-card {
+                display: inline-block;
+                text-decoration: none;
 
-
-
+}
+.portfolio-links {
+                padding: 20px 24px 20px 24px;
+                border: 1px solid #EEEEEE;
+                border-top: none;
+        }
 
 
 
