--- a/css/styles.css
+++ b/css/styles.css
@@ -221,34 +221,40 @@ li {
 
 /* Внимание к деталям */
 
-.section {
-        padding-top: 89px;
-        padding-bottom: 94px;
-        }
-
-.block {
-        width: 1200px;
-        margin-left: auto;
-        margin-right: auto;
-        padding-left: 15px;
-        padding-right: 15px;
+.benefits {
+        padding-bottom: 0;
 }
 
-.company {
-        margin-top: 0;
-        margin-bottom: 0;
-        display: none;
+
+.section {
+        padding-top: 94px;
+        padding-bottom: 94px;
+}
+
+
+.our-company {
+                margin-top: 0;
+                margin-bottom: 50px;
+                font-size: 36px;
+                line-height: 1.16;
+                text-align: center;
+                color: var(--secondary-text-color);
 }
 
 .details-list {
         display: flex;
-        justify-content: center;
+        margin-top: 0;
+        margin-bottom: 0;
 }
 
+.details:not(:last-child) {
+        margin-right: 30px;
+}
 
 .details {
         width: 270px;
 }
+
 
 
 .section .details-title {
@@ -321,33 +327,18 @@ li {
 
 
 .team {
-        margin-top: 94px;
-        margin-bottom: 0;
         background-color: var(--secondary-background-color);
         
 }
 
 
-.block-team {
-        box-sizing: border-box;
-        width: 1200px;
-        margin-left: auto;
-        margin-right: auto;
-        padding-left: 15px;
-        padding-right: 15px;
-        }
-
-
 .section-team {
-        color: var(--primary-text-color);
-        font-style: normal;
-        font-weight: 700;
+        text-align: center;
+        margin-top: 0;
+        margin-bottom: 50px;
         font-size: 36px;
         line-height: 1.16;
-        padding-top: 94px;
-        margin-bottom: 50px;
-        margin-top: 0;
-        text-align: center;
+        color: var(--primary-text-color);
         
 }
 
@@ -505,33 +496,21 @@ address {
 }
 
 .item {
-        padding: 6px 22px;
-        cursor: pointer;
-        font-family: 'Roboto', sans-serif;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.62;
-        letter-spacing: 0.03em;
-        color: var(--secondary-text-color);
-        background-color: var(--secondary-background-color);
-        border-radius: 4px;
-        border: 0;
+        margin-right: 8px;
 }
 
 .item-button {
-                background-color: var(--secondary-background-color);
-                border-color: transparent;
-                border-radius: 4px;
-                font-family: 'Roboto';
-                font-style: normal;
+                padding: 6px 22px;
+                cursor: pointer;
+                font-family: 'Roboto', sans-serif;
                 font-weight: 500;
                 font-size: 16px;
-                line-height: 2.16;
-                text-align: center;
+                line-height: 1.62;
                 letter-spacing: 0.03em;
                 color: var(--primary-text-color);
-                cursor: pointer;
-                padding: 0;                
+                background-color: var(--secondary-background-color);
+                border-radius: 4px;
+                border: 0;
 }
 
 
